--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
         UTBK Countdown
     </title>
     <link rel="stylesheet" href="css/style-blue.css">
+    <link rel="stylesheet" href="css/rain.css">
+    <link rel='stylesheet' href='sweetalert2.min.css'>
+    <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css' />
     <link rel="preload" href="css/style-white.css" as="style">
     <link rel="icon" href="image/yuhu.ico">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -27,42 +29,21 @@
                 </label>
 
                 <a href="#" class="menu-item"> <i class="fa fa-bar-chart"></i> </a>
-                <a href="#" class="menu-item"> <i class="fa fa-plus"></i> </a>
-                <a href="#" class="menu-item"> <i class="fa fa-heart"></i> </a>
+                <a href="#" class="menu-item" onclick="play()"> <i class="fa fa-volume-up"></i> </a>
+                <a href="#" class="menu-item pomodoro"> <i class="fa fa-clock-o"></i> </a>
                 <a href="#" class="menu-item"> <i class="fa fa-envelope"></i> </a>
                 <a href="#" class="menu-item"> <i class="fa fa-cog"></i> </a>
 
             </nav>
-
-
-            <!-- filters -->
-            <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
-                  <defs>
-                    <filter id="shadowed-goo">
-                        <feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="10" />
-                        <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
-                        <feGaussianBlur in="goo" stdDeviation="3" result="shadow" />
-                        <feColorMatrix in="shadow" mode="matrix" values="0 0 0 0 0  0 0 0 0 0  0 0 0 0 0  0 0 0 1 -0.2" result="shadow" />
-                        <feOffset in="shadow" dx="1" dy="1" result="shadow" />
-                        <feBlend in2="shadow" in="goo" result="goo" />
-                        <feBlend in2="goo" in="SourceGraphic" result="mix" />
-                    </filter>
-                    <filter id="goo">
-                        <feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="10" />
-                        <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
-                        <feBlend in2="goo" in="SourceGraphic" result="mix" />
-                    </filter>
-                  </defs>
-              </svg>
         </div>
     </div>
 
-    <script src="js/countdown.js"></script>
-    <script src="js/animatedbackground.js"></script>
     <footer>
-        <p>Visit <a href="https://ltmpt.ac.id/"> LTMPT</a>
-            <a href="#" onclick="changeCSS('css/style-blue.css', 0);">STYLE 1</a>
-            <a href="#" onclick="changeCSS('css/style-white.css', 0);">STYLE 2</a>
+        <p>
+            Mode:
+            <a href="#" onclick="changeCSS('css/style-blue.css', 0);">Dark</a>
+            <a href="#" onclick="changeCSS('css/style-white.css', 0);">Light</a> • Visit <a href="https://ltmpt.ac.id/"> LTMPT</a>
+        </p>
     </footer>
 
     <ul class="bg-bubbles">
@@ -77,6 +58,15 @@
         <li></li>
         <li></li>
     </ul>
+    <audio id="rain" src="audio/rain.m4a"></audio>
+    <script src='https://cdn.jsdelivr.net/npm/sweetalert2@10'></script>
+    <script src='https://cdn.jsdelivr.net/npm/promise-polyfill'></script>
+    <script src='sweetalert2.min.js'></script>
+    <script src='sweetalert2.all.min.js'></script>
+    <script src="js/alerts.js"></script>
+    <script src="js/audio.js"></script>
+    <script src="js/countdown.js"></script>
+    <script src="js/animatedbackground.js"></script>
 </body>
 
 </html>
