Add link to main page

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <p>
             Mode:
             <a href="#" onclick="changeCSS('css/style-blue.css', 0);">Dark</a>
-            <a href="#" onclick="changeCSS('css/style-white.css', 0);">Light</a> • Visit <a href="https://ltmpt.ac.id/"> LTMPT</a>
+            <a href="#" onclick="changeCSS('css/style-white.css', 0);">Light</a> • Visit <a href="https://ltmpt.ac.id/"> LTMPT</a> • Back to <a href="https://wargati.ga">Main Page</a>
         </p>
     </footer>
 
