--- a/index.html
+++ b/index.html
@@ -4,6 +4,26 @@
     <title>
         UTBK Countdown
     </title>
+
+    <!-- Primary Meta Tags -->
+    <title>UTBK Countdown</title>
+    <meta name="title" content="UTBK Countdown">
+    <meta name="description" content="Your simple UTBK dashboard. Learning source, pomodoro timer, and ambience sounds that help you to study and focus.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://utbk.wargati.ga/">
+    <meta property="og:title" content="UTBK Countdown">
+    <meta property="og:description" content="Your simple UTBK dashboard. Learning source, pomodoro timer, and ambience sounds that help you to study and focus.">
+    <meta property="og:image" content="https://utbk.wargati.ga/images/social-image.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://utbk.wargati.ga/">
+    <meta property="twitter:title" content="UTBK Countdown">
+    <meta property="twitter:description" content="Your simple UTBK dashboard. Learning source, pomodoro timer, and ambience sounds that help you to study and focus.">
+    <meta property="twitter:image" content="https://utbk.wargati.ga/images/social-image.png">
+
     <link rel="stylesheet" href="css/style-blue.css">
     <link rel="stylesheet" href="css/rain.css">
     <link rel='stylesheet' href='sweetalert2.min.css'>
