Improve code readability

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Primary Meta Tags -->
     <title>UTBK Countdown</title>
     <meta name="title" content="UTBK Countdown">
-    <meta name="description" content="Your simple UTBK dashboard. Learning source, pomodoro timer, and ambience sounds that help you to study and focus.">
+    <meta name="description" content="Simple UTBK dashboard. Learning source, pomodoro timer, and ambience sounds that help you study and focus.">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
